--- a/src/layouts/AppLayout/index.css
+++ b/src/layouts/AppLayout/index.css
@@ -6,3 +6,10 @@
     height: 100%;
     width: 100%;
 }
+
+.title {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: calc(100vw - 112px);
+}
