add filter and sort functionality

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -42,6 +42,14 @@
     font-size: 9px;
 }
 
+.emptyContainer {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media screen and (min-width: 768px) {
     .utilityContainer {
         position: static;
